--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,11 @@ a{
 nav{
   background: #000;
 }
-input{
+input , textarea{
   background: #000 !important;
 color: #fff !important;
 }
-input::placeholder{
+input::placeholder , textarea::placeholder{
   color: rgba(255, 255, 255, 0.522) !important;
   text-shadow: 1px 1px rgba(0, 0, 255, 0.548);
   text-align: center;
@@ -80,3 +80,45 @@ input::placeholder{
   z-index: 999999;
 }
 
+
+
+
+
+.card-big-shadow {
+    position: relative;
+}
+
+.card[data-radius="none"] {
+    border-radius: 0px;
+}
+.card {
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5);
+    background-color: #FFFFFF;
+    color: #252422;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+
+.card-big-shadow:before {
+    background-image: url("http://static.tumblr.com/i21wc39/coTmrkw40/shadow.png");
+    background-size: 100% 100%;
+    bottom: -12%;
+    content: "";
+    display: block;
+    left: -12%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 0;
+}
+
+
+.content-card{
+    margin-top:30px;    
+}
+.content{
+  min-height: 300px ;
+}
